--- a/ex003/index.html
+++ b/ex003/index.html
@@ -17,8 +17,11 @@
     <p>me livrei da tal maldição</p>
 
     <script>
-        var nome = prompt('qual é o seu nome? ')
-        alert('é um prazer te conhecer ' + nome)
+        var n1 = Number( prompt('digite um número:'))
+        var n2 = Number(prompt('digite outro número:'))
+        var s = n1 + n2 
+
+        alert('a soma dos valores é ' + String(s))
     </script>
 </body>
 </html>
