atualizando o curso de JS

--- a/ex003/index.html
+++ b/ex003/index.html
@@ -6,7 +6,7 @@
     <title>meu primeiro script</title>
     <style>
         body{
-            background-color: rgb(128, 127, 127);
+            background-color: rgb(64, 44, 175);
             color: white;
             font:  normal 20pt arial, sans-serif;
         }
@@ -21,7 +21,7 @@
         var n2 = Number(prompt('digite outro número:'))
         var s = n1 + n2 
 
-        alert('a soma dos valores é ' + String(s))
+        alert(`A soma entre ${n1} e ${n2} é igual a ${s}`)
     </script>
 </body>
 </html>
