--- a/ex004/index.html
+++ b/ex004/index.html
@@ -18,9 +18,9 @@
 
 <script>
     var nome = prompt('qual é o seu nome?')
-    document.write(`Olá, ${nome} ! Seu nome tem <strong>${nome.length}</strong> letras<br>`)
-    document.write(`seu nome em letras maiúsculas é  <strong>${nome.toUpperCase()}</strong> <br>`)
-    document.write(`e o seu nome em letras minúsculas é  <strong>${nome.toLocaleLowerCase()}</strong>`)
+    document.write(`Olá, ${nome} ! Seu nome tem ${nome.length} letras`) //contagem de letras🧮
+    document.write(`seu nome em letras maiúsculas é ${nome.toUpperCase()} `)// deixa às letras maiúsculas 
+    document.write(`e o seu nome em letras minúsculas é  ${nome.toLocaleLowerCase()}`)// deixa às letras minúsculas
 </script>
 
 </body>
