--- a/ex005/index.html
+++ b/ex005/index.html
@@ -20,10 +20,10 @@
 
     <script>
         var p1 = window.document.getElementsByTagName('p')[0]
-        p1.style.color = 'blue'
+        p1.style.color = 'blue' //podemos selecionar o conteúdo pelo nome da tag e defininir qual usaremos com colchetes(se você colocar 0 será o primeiro elemento, e ssucessivamente com a ordem crescente)
         document.write('está escrito assim: ' + p1.innerText)
-
-        var d = window.document.getElementById('msg')
+        //esse comando (write), serve para escrever dentro do documento.
+        var d = window.document.getElementById('msg')//podemos selecionar o conteúdo com (ID)
         d.style.background = 'green'
         //d.innerText = 'estou aguardando...'
     </script>
