--- a/ex14_prática copy/modelo.html
+++ b/ex14_prática copy/modelo.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 
-<body>
+<body onload="carregar()">
     <div id="container">
         <div class="principal">
             <header>
-                <h1>Título</h1>
+                <h1>Hora do dia</h1>
             </header>
             <section>
-                <div>
-                    testando
+                <div id="msg">
+                    Aqui vai aparecer a mensagem...
                 </div>
-                <div>
-                    olá
+                <div id="foto">
+                    <img id="imagem" src="image/foto_manhã.jpg" alt="">
                 </div>
             </section>
             <footer>
