atualizando curso js
aqui estou colocando às imagens do exercício

--- a/ex12_prática/modelo.html
+++ b/ex12_prática/modelo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 
-<body>
+<body onload="carregar()">
     <div id="container">
         <div class="principal">
             <header>
@@ -16,10 +16,10 @@
             </header>
             <section>
                 <div>
-                    testando
+                    
                 </div>
-                <div>
-                    olá
+                <div id="resultado">
+                    
                 </div>
             </section>
             <footer>
